--- a/style.css
+++ b/style.css
@@ -337,6 +337,93 @@ canvas {
     font-weight: bold;
   }
 
+  #settings-layout{
+    display: flex;
+    
+    flex-direction: column;
+    align-items: center;
+    width: 28rem;
+    height: 24rem;
+    background-color: var(--color-primary);
+    border-radius: 2rem;
+   
+    border-width: .3rem;
+    border-top-left-radius: 0;
+    border-bottom-right-radius: 0;
+    transition: all 0.5s linear;
+  }
+
+  #header-container{
+   
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 100%;
+      
+     
+  }
+  #header-settings{
+    font-size: 3rem;
+    font-weight: 600;
+    color: var(--color-secondary);
+
+  }
+  #exitSettings{
+    background: none;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    fill: var(--color-text-primary);
+    font-size: 3rem;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+  }
+  #exitSettings:hover{
+    transform: rotate(90deg);
+    transition: all .3s ease-in-out;
+  }
+  #exitSettings svg{
+    width: 3rem;
+    height: 3rem;
+  }
+
+  #input-container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+  }
+
+  #setButton{
+    background-color: var(--color-secondary);
+    color: var(--color-text-primary);
+    border: none;
+    width: 8rem;
+    height: 2.5rem;
+    border-radius: 3rem;
+    font-size: 1rem;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all .1s ease-in-out;
+    margin-right: 1rem;
+  }
+  #minutesInput{
+    width: 7rem;
+    height: 2.25rem;
+    border-radius: .5rem;
+    border: none;
+    text-align: center;
+    font-size: 1.15rem;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 500;
+  }
+
 
 
 
