--- a/style.css
+++ b/style.css
@@ -517,8 +517,18 @@ canvas {
     font-weight: 500;
   }
 
+#pic{
+  object-fit: cover;
+  width:3rem;
+  height:3rem;
+}
+#logo-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 
-
+}
 
 
 
